<resources>
    <string name="app_name">FoodAppAdvanced</string>
    <string name="foodator">Foodator</string>
    <string name="food_delivery_app">Food Delivery App</string>
    <string name="get_start">Get Start</string>
    <string name="hi_youssef">Hi youssef</string>
    <string name="order_amp_eat"><![CDATA[Order & Eat]]></string>
    <string name="find_your_food">Find Your Food</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="may_2_june_10">May 2 - June 10</string>
    <string name="order_now">Order Now</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="pizza">Pizza</string>
    <string name="burger">Burger</string>
    <string name="hotDog">HotDog</string>
    <string name="drink">Drink</string>
    <string name="donut">Donut</string>
    <string name="title">Title</string>
    <string name="add">+Add</string>
    <string name="egp">EGP</string>
    <string name="my_card">My Card</string>
    <string name="item_total">Item Total:</string>
    <string name="_0_gep">0 GEP</string>
    <string name="check_out">Check Out</string>
</resources>