<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.IntroActivity">

        <ImageView
            android:id="@+id/iv_back_ground"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_450sdp"
            android:scaleType="fitXY"
            android:src="@drawable/background_intro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@id/iv_back_ground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_back_ground"
            app:layout_constraintTop_toTopOf="@id/iv_back_ground"
            app:layout_constraintVertical_bias=".6" />

        <TextView
            android:id="@+id/tv_fooder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodator"
            android:textColor="#3D33A8"
            android:textSize="@dimen/_40ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_back_ground" />

        <TextView
            android:id="@+id/tv_food_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_delivery_app"
            android:textColor="#3d33a8"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_back_ground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <com.google.android.material.button.MaterialButton
            android:onClick="GetStart"
            android:id="@+id/btn_get_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff5e00"
            android:padding="@dimen/_8sdp"
            android:text="@string/get_start"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back_ground"
            app:layout_constraintVertical_bias=".7"
            app:layout_constraintWidth_percent=".8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>