<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/cart_background"
        android:elevation="@dimen/_3sdp">


        <ImageView
            android:id="@+id/iv_popular_pizza"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_title"
            app:srcCompat="@drawable/pizza2" />

        <TextView
            android:id="@+id/tv_popular_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#373b54"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_popular_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="0.0"
            android:textAlignment="center"
            android:textColor="#373b54"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_popular_pizza" />

        <TextView
            android:id="@+id/tv_popular_egp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egp"
            android:textColor="#ff3d00"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_popular_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_popular_price"
            app:layout_constraintTop_toBottomOf="@+id/iv_popular_pizza" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_popular_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:backgroundTint="#ff5e00"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="@dimen/_12sdp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>