<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_90sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView

                        android:id="@+id/tv_youssef"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/hi_youssef"
                        android:textColor="#ff3d00"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_order_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/order_amp_eat"
                        android:textColor="#000000"
                        android:textSize="@dimen/_20ssp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_youssef"
                        app:layout_constraintStart_toStartOf="@+id/tv_youssef"
                        app:layout_constraintTop_toBottomOf="@+id/tv_youssef" />

                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/profile"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_order_edit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_youssef" />

                    <EditText
                        android:id="@+id/tv_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@drawable/ed_shape"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:drawablePadding="@dimen/_8sdp"
                        android:ems="10"
                        android:hint="@string/find_your_food"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_order_edit"
                        app:layout_constraintVertical_bias="0" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint_www"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@drawable/shap_back"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_search">

                        <ImageView
                            android:id="@+id/imageView_constrain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/image_banner"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_free_delivary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_7sdp"
                            android:text="@string/free_delivery"
                            android:textColor="#000000"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView_constrain"
                            app:layout_constraintTop_toTopOf="@+id/imageView_constrain" />

                        <TextView
                            android:id="@+id/tv_may_2_june_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/may_2_june_10"
                            android:textColor="#000000"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_free_delivary" />

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_3sdp"
                            android:backgroundTint="#ff5e00"
                            android:text="@string/order_now"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="@dimen/_12sdp"
                            app:cornerRadius="@dimen/_10sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_may_2_june_10" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_categoris"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/categories"
                        android:textColor="#000000"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraint_www" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_categoris" />

                    <TextView
                        android:id="@+id/tv_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/popular"
                        android:textColor="#000000"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/categories_rv" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/popular_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_popular" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </ScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            app:layout_constraintBottom_toBottomOf="@id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/app_bar_w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="#f6f6f6"
                app:fabCradleMargin="@dimen/_8sdp"
                app:fabCradleRoundedCornerRadius="@dimen/_50sdp"
                app:fabCradleVerticalOffset="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="BottomAppBar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/homeBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_home"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bottom_btn1" />

                        <TextView
                            android:id="@+id/tv_home"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/home"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_profile_bar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bottom_btn2" />

                        <TextView
                            android:id="@+id/tv_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bottom_btn1" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Home"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_support"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bottom_btn3" />

                        <TextView
                            android:id="@+id/tv_support"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/support"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_sitting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bottom_btn4" />

                        <TextView
                            android:id="@+id/tv_sitting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>


                </LinearLayout>
            </com.google.android.material.bottomappbar.BottomAppBar>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_cart_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ff5e00"
                android:elevation="@dimen/_3sdp"
                android:src="@drawable/shopping_cart"
                app:backgroundTint="#ff5e00"
                app:layout_anchor="@id/app_bar_w"
                app:maxImageSize="@dimen/_30sdp"
                app:tint="#ffffff" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>